--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
 
 
 <form action="https://wordwall.net/pt/resource/80809900/702-%c3%a2ngulos-e-tri%c3%a2ngulos" method="GET">
-<button id="bk" div class="button">Ângulos e triangulos</button> </div> </div></form> 
+<button id="bk" div class="button">Ângulos e triângulos</button> </div> </div></form> 
 
 
 <form action="https://wordwall.net/pt/resource/80809932/702-equa%c3%a7%c3%b5es-de-1-grau" method="GET">
-<button id="bl" div class="button">Equações do 1 grau</button> </div> </div></form> <br>
+<button id="bl" div class="button">Equações do 1° grau</button> </div> </div></form> <br>
 
 
 
@@ -95,7 +95,7 @@
 <p id="bq" class="palavras">Grupo 5:</p>
 
 <form action="https://wordwall.net/pt/resource/80958694/702-opera%c3%a7%c3%b5es-com-n%c3%bameros-racionais" method="GET">
-<button id="br" div class="button">Op. números racionais</button> </div></div> </form> 
+<button id="br" div class="button">Operações: números racionais</button> </div></div> </form> 
 
 
 <form action="https://wordwall.net/pt/resource/80806895/702-encontre-as-fra%c3%a7%c3%b5es-escondidas" method="GET">
