--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <p id="bq" class="palavras">Grupo 5:</p>
 
 <form action="https://wordwall.net/pt/resource/80958694/702-opera%c3%a7%c3%b5es-com-n%c3%bameros-racionais" method="GET">
-<button id="br" div class="button">Operações: EmQ</button> </div></div> </form> 
+<button id="br" div class="button">Operações em Q </button> </div></div> </form> 
 
 
 <form action="https://wordwall.net/pt/resource/80806895/702-encontre-as-fra%c3%a7%c3%b5es-escondidas" method="GET">
