--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 
 <form action="https://wordwall.net/pt/resource/80809415/702-per%c3%admetro-e-%c3%a1rea" method="GET">
-<button id="bd" div class="button">Perímetro e área</button> </div></div> </form> <br>
+<button id="bd" div class="button">Perímetros e áreas</button> </div></div> </form> <br>
 
 
 
@@ -54,11 +54,11 @@
 <button id="bf" div class="button">Polígonos</button> </div> </div></form> 
 
 <form action="https://wordwall.net/play/80809/870/669" method="GET">
-<button id="bg" div class="button">Equações do 1 grau</button> </div> </div></form> 
+<button id="bg" div class="button">Equações do 1° grau</button> </div> </div></form> 
 
 
 <form action="https://wordwall.net/pt/resource/private/80957886" method="GET">
-<button id="bh" div class="button">Inequações do 1 grau</button> </div></div> </form> <br>
+<button id="bh" div class="button">Inequações do 1° grau</button> </div></div> </form> <br>
 
 
 
